# pshell

./: .clang-format  .gitmodules  BSD_3_CLAUSE.md  CMakeLists.txt  FUNCTIONS.md  GETTING-STARTED.md  README.md  WHATSNEW.md  c4.c  c4.h  cc.c  cc.h  cc_printf.S  cmake2040  cmake2040d  cmpico2  cmpico2d  cmpico_w  cmvga  crc16.c  crc16.h  fs.c  fs.h  io.c  io.h  lfs.c  main.c  mc.c  mc.h  pico_hal.c  pico_hal.h  pshell.ld  release-build  shell.c  test.S  version.h  vi.c  vi.h  xcommon.h  xmodem.c  (+4 more)
.github/workflows/: codeql-analysis.yml
c-examples/: .exrc  README.md  blink.c  clocks.c  color.c  crash.c  crc16.c  day8.c  day8.txt  doughnut.c  exit.c  fade.c  floatops.c  forward.c  hello.c  intops.c  io.c  irq-blink.c  life.c  lorenz.c  penta.c  pi.c  printf.c  qsort.c  rndtest.c  sieve.c  sine.c  string.c  testfloat.c  testint.c  tictoc.c  wumpus.c
cc/: CMakeLists.txt  cc.c  cc.h  cc_defs.h  cc_extrns.h  cc_malloc.c  cc_malloc.h  cc_ops.h  cc_peep.c  cc_peep.h  cc_printf.S  cc_tokns.h
cc/2040/: cc_defs.h  cc_extrns.h
cc/2350/: cc_defs.h  cc_extrns.h
disassembler/: CMakeLists.txt  armdisasm.c  armdisasm.h
disassembler/module/: armdisasm.c  armdisasm.h
docs/: FUNCTIONS.md  GETTING-STARTED.md  GPIO.md  WHATSNEW.md
flashio/: CMakeLists.txt  io.c
littlefs/: CMakeLists.txt
main/: readln.c  tar.c  tar.h  tests.h
misc/: CMakeLists.txt  io.h  pshell.ld  pshell_2040.ld  pshell_2350.ld  readln.h
sdio/: CMakeLists.txt  crc.c  crc.h  fs.c  fs.h  hw_config.c  hw_config.h  io.c  sd_card.c  sd_card.h  sd_spi.c  sd_spi.h  sd_spi.pio  spi.c  spi.h
src/: cc.c  cc.h  cc_defs.h  cc_dmpast.c  cc_dmpast.h  cc_extrns.h  cc_malloc.c  cc_nops.h  cc_ops.h  cc_printf.S  cc_tokns.h  crc16.h  dgreadln.c  dgreadln.h  fs.h  io.h  main.c  pshell.ld  readln.c  tar.c  tests.c  version.h  vi.c  xmodem.c  xmodem.h
test-driver/: driver.cpp
tests/failed/: 00010.c  00033.c  00034.c  00038.c  00043.c  00050.c  00063.c  00077.c  00116.c  00130.c  00155.c  00181.c  00182.c  00192.c
tests/passed/: 00002.c  00003.c  00004.c  00005.c  00006.c  00007.c  00008.c  00009.c  00011.c  00012.c  00013.c  00014.c  00015.c  00016.c  00017.c  00018.c  00019.c  00020.c  00021.c  00023.c  00025.c  00026.c  00027.c  00028.c  00029.c  00030.c  00031.c  00032.c  00035.c  00036.c  00037.c  00039.c  00041.c  00042.c  00051.c  00052.c  00056.c  00057.c  00058.c  00059.c  (+57 more)
tests/unsupported/: 00022.c  00024.c  00040.c  00044.c  00045.c  00046.c  00047.c  00048.c  00049.c  00053.c  00054.c  00055.c  00064.c  00065.c  00066.c  00067.c  00068.c  00069.c  00071.c  00074.c  00078.c  00079.c  00081.c  00082.c  00083.c  00084.c  00085.c  00086.c  00087.c  00088.c  00089.c  00091.c  00092.c  00093.c  00094.c  00095.c  00096.c  00097.c  00098.c  00099.c  (+68 more)
vi/: CMakeLists.txt  vi.c  vi.h
xymodem/: CMakeLists.txt  xmodem.c  xmodem.h  ymodem.c  ymodem.h
